--- a/ShamsAlShamoos01.Client/Client/wwwroot/index.html
+++ b/ShamsAlShamoos01.Client/Client/wwwroot/index.html
@@ -18,10 +18,11 @@
     <link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" asp-append-version="true" />
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css?v=@DateTime.UtcNow.Ticks" />
-    <link rel="stylesheet" href="css/app.css?v=@DateTime.UtcNow.Ticks" />
-    <link rel="stylesheet" href="css/MainLayoutNavMenu.css?v=@DateTime.UtcNow.Ticks" />
-    <link rel="stylesheet" href="ShamsAlShamoos01.Client.Client.styles.css?v=@DateTime.UtcNow.Ticks" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="css/app.css" asp-append-version="true" />
+    <link rel="stylesheet" href="css/MainLayoutNavMenu.css" asp-append-version="true" />
+    <link rel="stylesheet" href="ShamsAlShamoos01.Client.styles.css" asp-append-version="true" />
+
 
     <link rel="icon" type="image/png" href="ShamsAlShamoos01.png" />
 </head>
@@ -42,14 +43,13 @@
     </div>
 
     <!-- Syncfusion JS -->
-    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js"></script>
-
+    <script defer src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js"
+            asp-append-version="true"></script>
     <!-- Bootstrap JS (برای offcanvas موبایل) -->
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>-->
-    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
-
+    <script defer src="js/bootstrap/bootstrap.bundle.min.js"
+            asp-append-version="true"></script>
     <!-- Blazor WebAssembly -->
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script defer src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
