--- a/ShamsAlShamoos01.Client/Client/wwwroot/index.html
+++ b/ShamsAlShamoos01.Client/Client/wwwroot/index.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="css/app.css" asp-append-version="true" />
     <link rel="stylesheet" href="css/MainLayoutNavMenu.css" asp-append-version="true" />
-    <link rel="stylesheet" href="ShamsAlShamoos01.Client.styles.css" asp-append-version="true" />
-
+    <!--<link rel="stylesheet" href="css/ShamsAlShamoos01.Client.styles.css" asp-append-version="true" />-->
+    <link href="css/styles.css" rel="stylesheet" />
 
     <link rel="icon" type="image/png" href="ShamsAlShamoos01.png" />
 </head>
