--- a/ShamsAlShamoos03.Client/Client/wwwroot/index.html
+++ b/ShamsAlShamoos03.Client/Client/wwwroot/index.html
@@ -17,7 +17,8 @@
             </div>
         </div>
     </div>
-     
+
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
